tests/error/0020.exl
{
    a = 1,
    ?
    ^ERROR
}
